--- a/exp/exp_0101/config/config.yaml
+++ b/exp/exp_0101/config/config.yaml
@@ -5,13 +5,16 @@ seed: 77
 epoch: 10
 fold: StratifiedKFold
 fold_num: 10
-use_fold: [0, 1, 2, 3, 4, 5, 6, 7 ,8, 9] # [0, 1, 2, 3, 4, 5, 6, 7 ,8, 9]
-dense_columns: ['Subject Focus', 'Eyes', 'Face', 'Near', 'Action', 'Accessory', 'Group', 'Collage', 'Human', 'Occlusion', 'Info', 'Blur']
-features_num: 128
+use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 model_arch: swin_base_patch4_window7_224_in22k
 device: cuda:0
 save: True
 result_output: True
+
+######   Features   ####################################
+train_csv: 'train' # {train_csv}.csv
+dense_columns: ['original'] # 'original', 'basic', 'hash', ('all')
+features_num: 128
 
 ######   Loss   ########################################
 loss: BCEWithLogitsLoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
@@ -57,9 +60,6 @@ train_aug:
     height: ${img_size}
     width: ${img_size}
     p: 1.0
-  # Resize:
-  #   height: ${img_size}
-  #   width: ${img_size}
   Normalize:
     mean: ${img_mean}
     std: ${img_std}
@@ -99,7 +99,6 @@ train_aug:
     p: 0.1
   ToGray:
     p: 0.1
-
 
 valid_aug:
   Resize:
