--- a/exp/exp_0109/config/config.yaml
+++ b/exp/exp_0109/config/config.yaml
@@ -48,9 +48,9 @@ valid_bs: 16
 num_workers: 2
 
 ##### MixUp #############################################
-mix_p: 0.5
-init_nomix_epoch: 1
-last_nomix_epoch: 1
+mix_p: 0.
+init_nomix_epoch: 0
+last_nomix_epoch: 0
 
 ##### Data Augmentation #################################
 padding: None
