--- a/exp/exp_0113/config/config.yaml
+++ b/exp/exp_0113/config/config.yaml
@@ -5,7 +5,7 @@ seed: 77
 epoch: 15
 fold: StratifiedKFold
 fold_num: 10
-use_fold: [0] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+use_fold: [0, 1, 2] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 model_arch: swin_base_patch4_window7_224_in22k
 device: cuda:0
 save: True
@@ -23,7 +23,7 @@ gamma: 0. # FOCALLoss
 ##### Optimizer ########################################
 optimizer: AdamW
 lr: 1e-5
-weight_decay: 1e-2
+weight_decay: 1e-6
 beta1: 0.5
 beta2: 0.999
 
