--- a/exp/exp_0122/config/config.yaml
+++ b/exp/exp_0122/config/config.yaml
@@ -23,17 +23,17 @@ gamma: 0 # FOCALLoss
 ##### Optimizer ########################################
 optimizer: AdamW
 lr: 1e-5
-weight_decay: 1e-6
+weight_decay: 1e-2
 beta1: 0.5
 beta2: 0.999
 
 ##### Scheduler ########################################
-scheduler: CosineAnnealingWarmRestarts # OneCycleLR
+scheduler: OneCycleLR # OneCycleLR
 T_0: ${epoch} # CAWR
 T_mult: 1 # CAWR
 eta_min: 1e-9 # CAWR
 
-pct_start: 0.3 # OCLR
+pct_start: 0.2 # OCLR
 div_factor: 25. # OCLR
 final_div_factor: 1000. # OCLR
 
