--- a/stacking/exp_0001/config/config.yaml
+++ b/stacking/exp_0001/config/config.yaml
@@ -2,5 +2,18 @@ exps: [84, 89, 91, 93, 95, 101, 113, 115, 120]
 seed: 77
 fold: StratifiedKFold
 fold_num: 6
+count: 100
 
 model: SVR
+sweep_cfg:
+  method: bayes
+  metric:
+    name: valid_rmse
+    goal: minimize
+  parameters:
+    C:
+      values: [2**i for i in range(-5, 11)]
+    epcilon:
+      values: [2**i for i in range(-10, 1)]
+    gamma:
+      values: [2**i for i in range(-20, 11)]
