--- a/exp/exp_0126/config/config.yaml
+++ b/exp/exp_0126/config/config.yaml
@@ -8,8 +8,8 @@ fold_num: 10
 use_fold: [0] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 model_arch: swin_large_patch4_window12_384
 device: cuda:0
-save: False
-result_output: False
+save: True
+result_output: True
 
 ######   Features   ####################################
 train_csv: 'train' # {train_csv}.csv
@@ -18,7 +18,7 @@ features_num: 128
 
 ######   Loss   ########################################
 loss: BCEWithLogitsLoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
-gamma: 0. # FOCALLoss
+gamma: 0 # FOCALLoss
 
 ##### Optimizer ########################################
 optimizer: AdamW
@@ -40,7 +40,7 @@ final_div_factor: 1000. # OCLR
 ##### Image Info ########################################
 img_mean: [0.485, 0.456, 0.406]
 img_std: [0.229, 0.224, 0.225]
-img_size: 384
+img_size: 224
 
 ##### DataLoader ########################################
 train_bs: 16
