--- a/exp/exp_0133/config/config.yaml
+++ b/exp/exp_0133/config/config.yaml
@@ -2,11 +2,11 @@
 data_path: /content/drive/MyDrive/kaggle_PetFinder/data
 wandb_project: kaggle_PF
 seed: 77
-epoch: 10
+epoch: 5
 fold: StratifiedKFold
 fold_num: 10
-use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
-model_arch: swin_large_patch4_window7_224
+use_fold: [0, 1] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+model_arch: swin_base_patch4_window7_224
 device: cuda:0
 save: True
 save_step: 75
