--- a/exp/exp_0136/config/config.yaml
+++ b/exp/exp_0136/config/config.yaml
@@ -5,11 +5,11 @@ seed: 77
 epoch: 10
 fold: StratifiedKFold
 fold_num: 10
-use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+use_fold: [0] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 model_arch: swin_large_patch4_window12_384_in22k
 device: cuda:0
 save: True
-save_step: 75
+save_step: 150
 result_output: True
 
 ######   Features   ####################################
@@ -44,8 +44,8 @@ img_std: [0.229, 0.224, 0.225]
 img_size: 384
 
 ##### DataLoader ########################################
-train_bs: 16
-valid_bs: 16
+train_bs: 8
+valid_bs: 8
 num_workers: 2
 
 ##### MixUp #############################################
