--- a/exp/exp_0141/config/config.yaml
+++ b/exp/exp_0141/config/config.yaml
@@ -2,7 +2,7 @@
 data_path: /content/drive/MyDrive/kaggle_PetFinder/data
 wandb_project: kaggle_PF
 seed: 77
-epoch: 15
+epoch: 10
 fold: StratifiedKFold
 fold_num: 10
 use_fold: [0] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
@@ -18,13 +18,13 @@ dense_columns: ['original'] # 'original', 'basic', 'hash', ('all')
 features_num: 128
 
 ######   Loss   ########################################
-loss: FOCALLoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
-gamma: 0.1 # FOCALLoss
+loss: GradeLabelBCEWithLogits # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
+gamma: 0. # FOCALLoss
 
 ##### Optimizer ########################################
 optimizer: AdamW
-lr: 1e-5
-weight_decay: 1e-6
+lr: 2e-5
+weight_decay: 1e-2
 beta1: 0.5
 beta2: 0.999
 
@@ -61,16 +61,6 @@ train_aug:
     height: ${img_size}
     width: ${img_size}
     p: 1.0
-  # HorizontalFlip:
-  #   p: 0.25
-  # VerticalFlip:
-  #   p: 0.25
-  # RandomAugMix:
-  #   severity: 4
-  #   width: 4
-  #   depth: 5
-  #   alpha: 1.
-  #   p: 1.
   Normalize:
     mean: ${img_mean}
     std: ${img_std}
