--- a/exp/exp_0144/config/config.yaml
+++ b/exp/exp_0144/config/config.yaml
@@ -20,8 +20,8 @@ dense_columns: ['original'] # 'original', 'basic', 'hash', ('all')
 features_num: 128
 
 ######   Loss   ########################################
-loss: GradeLabelBCEWithLogits # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
-gamma: 0. # FOCALLoss
+loss: FOCALLoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
+gamma: 0.1 # FOCALLoss
 
 ##### Optimizer ########################################
 optimizer: AdamW
