--- a/exp/exp_0144/config/config.yaml
+++ b/exp/exp_0144/config/config.yaml
@@ -20,7 +20,7 @@ dense_columns: ['original'] # 'original', 'basic', 'hash', ('all')
 features_num: 128
 
 ######   Loss   ########################################
-loss: MSELoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
+loss: FOCALLoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
 gamma: 0.1 # FOCALLoss
 
 ##### Optimizer ########################################
