--- a/exp/exp_0145/config/config.yaml
+++ b/exp/exp_0145/config/config.yaml
@@ -31,7 +31,7 @@ beta1: 0.5
 beta2: 0.999
 
 ##### Scheduler ########################################
-scheduler: CosineAnnealingWarmRestarts # OneCycleLR
+scheduler: OneCycleLR # OneCycleLR
 T_0: ${epoch} # CAWR
 T_mult: 1 # CAWR
 eta_min: 1e-9 # CAWR
