--- a/exp/exp_0145/config/config.yaml
+++ b/exp/exp_0145/config/config.yaml
@@ -2,7 +2,7 @@
 data_path: /content/drive/MyDrive/kaggle_PetFinder/data
 wandb_project: kaggle_PF
 seed: 77
-epoch: 2
+epoch: 1
 fold: StratifiedKFold
 fold_num: 10
 use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
@@ -10,7 +10,7 @@ model_arch: swin_large_patch4_window7_224
 device: cuda:0
 cls: [1]
 cls_weights: [1]
-save: True
+save: False
 save_step: 75
 result_output: False
 
