--- a/exp/exp_0145/config/config.yaml
+++ b/exp/exp_0145/config/config.yaml
@@ -8,11 +8,11 @@ fold_num: 10
 use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 model_arch: swin_large_patch4_window7_224
 device: cuda:0
-cls: [1]
-cls_weights: [1]
-save: False
+cls: [1, 10, 20, 100]
+cls_weights: [1, 1, 1, 1]
+save: True
 save_step: 75
-result_output: False
+result_output: True
 
 ######   Features   ####################################
 train_csv: 'train' # {train_csv}.csv
