--- a/exp/exp_0146/config/config.yaml
+++ b/exp/exp_0146/config/config.yaml
@@ -5,13 +5,13 @@ seed: 77
 epoch: 10
 fold: StratifiedKFold
 fold_num: 10
-use_fold: [0] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 model_arch: swin_large_patch4_window7_224
 device: cuda:0
-cls: [1, 5, 10, 20, 100]
-cls_weights: [1, 1, 1, 1, 1]
+cls: [1, 5, 10, 20]
+cls_weights: [1, 1, 1, 1]
 save: True
-save_step: 75
+save_step: 32
 result_output: True
 
 ######   Features   ####################################
