--- a/exp/exp_0152/config/config.yaml
+++ b/exp/exp_0152/config/config.yaml
@@ -22,8 +22,8 @@ dense_columns: ['original'] # 'original', 'basic', 'hash', ('all')
 features_num: 128
 
 ######   Loss   ########################################
-loss: FOCALLoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
-gamma: 0.1 # FOCALLoss
+loss: MSELoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
+gamma: 0. # FOCALLoss
 
 ##### Optimizer ########################################
 optimizer: AdamW
