--- a/exp/exp_0150/config/config.yaml
+++ b/exp/exp_0150/config/config.yaml
@@ -3,21 +3,19 @@ data_path: /content/drive/MyDrive/kaggle_PetFinder/data
 wandb_project: kaggle_PF
 seed: 77
 epoch: 10
-fold: StratifiedKFold
+fold: StratifiedGroupKFold
 fold_num: 10
 use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
-model_arch: swin_large_patch4_window7_224
+model_arch: swin_base_patch4_window7_224
 device: cuda:0
-cls: [100]
-cls_weights: [1]
-sigma: 10
-lambda_: 1
+cls: [1, 5, 10, 20, 100]
+cls_weights: [1, 1, 1, 1, 1]
 save: True
 save_step: 32
 result_output: True
 
 ######   Features   ####################################
-train_csv: 'train' # {train_csv}.csv
+train_csv: 'train_5' # {train_csv}.csv
 dense_columns: ['original'] # 'original', 'basic', 'hash', ('all')
 features_num: 128
 
