--- a/exp/exp_0169/config/config.yaml
+++ b/exp/exp_0169/config/config.yaml
@@ -11,10 +11,10 @@ device: cuda:0
 cls: [100]
 cls_weights: [1]
 sigma: 10
-lambda_: 0.002
-save: False
+lambda_: 0.001
+save: True
 save_step: 32
-result_output: False
+result_output: True
 
 ######   Features   ####################################
 train_csv: 'train' # {train_csv}.csv
