--- a/exp/exp_0174/config/config.yaml
+++ b/exp/exp_0174/config/config.yaml
@@ -6,12 +6,12 @@ epoch: 10
 fold: StratifiedKFold
 fold_num: 10
 use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
-model_arch: tf_efficientnet_b3_ns
+model_arch: swin_large_patch4_window7_224
 device: cuda:0
 cls: [100]
 cls_weights: [1]
 sigma: 10
-lambda_: 1.
+lambda_: 0.001
 save: True
 save_step: 75
 result_output: True
