--- a/exp/exp_0174/config/config.yaml
+++ b/exp/exp_0174/config/config.yaml
@@ -22,7 +22,7 @@ dense_columns: ['original'] # 'original', 'basic', 'hash', ('all')
 features_num: 128
 
 ######   Loss   ########################################
-loss: MSELoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
+loss: BCEWithLogitsLoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
 gamma: 0. # FOCALLoss
 
 ##### Optimizer ########################################
