--- a/exp/exp_0174/config/config.yaml
+++ b/exp/exp_0174/config/config.yaml
@@ -6,7 +6,7 @@ epoch: 10
 fold: StratifiedKFold
 fold_num: 10
 use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
-model_arch: swin_large_patch4_window7_224
+model_arch: tf_efficientnet_b3_ns
 device: cuda:0
 cls: [100]
 cls_weights: [1]
@@ -17,9 +17,9 @@ save_step: 75
 result_output: True
 
 ######   Features   ####################################
-train_csv: 'train' # {train_csv}.csv
-dense_columns: ['original'] # 'original', 'basic', 'hash', ('all')
-features_num: 128
+train_csv: /content/drive/MyDrive/kaggle_PetFinder/outputs/exp_0170/result.csv
+# dense_columns: ['original'] # 'original', 'basic', 'hash', ('all')
+# features_num: 128
 
 ######   Loss   ########################################
 loss: MSELoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
