--- a/exp/exp_0174/config/config.yaml
+++ b/exp/exp_0174/config/config.yaml
@@ -2,10 +2,10 @@
 data_path: /content/drive/MyDrive/kaggle_PetFinder/data
 wandb_project: kaggle_PF
 seed: 77
-epoch: 10
+epoch: 20
 fold: StratifiedKFold
 fold_num: 10
-use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+use_fold: [0] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 model_arch: tf_efficientnet_b3_ns
 device: cuda:0
 cls: [100]
@@ -27,7 +27,7 @@ gamma: 0. # FOCALLoss
 
 ##### Optimizer ########################################
 optimizer: AdamW
-lr: 2e-5
+lr: 1e-4
 weight_decay: 1e-6
 beta1: 0.5
 beta2: 0.999
