--- a/exp/exp_0180/config/config.yaml
+++ b/exp/exp_0180/config/config.yaml
@@ -53,7 +53,7 @@ valid_bs: 32
 num_workers: 2
 
 ##### MixUp #############################################
-mix_p: 0.
+mix_p: 0
 init_nomix_epoch: 0
 last_nomix_epoch: 0
 
