--- a/exp/exp_0182/config/config.yaml
+++ b/exp/exp_0182/config/config.yaml
@@ -65,13 +65,13 @@ train_aug:
     height: ${img_size}
     width: ${img_size}
     p: 1.0
-  # HorizontalFlip:
-  #   p: 0.5
-  # ShiftScaleRotate:
-  #   shift_limit: 0.1
-  #   scale_limit: 0.1
-  #   rotate_limit: 10
-  #   p: 0.5
+  HorizontalFlip:
+    p: 0.5
+  ShiftScaleRotate:
+    shift_limit: 0.1
+    scale_limit: 0.1
+    rotate_limit: 10
+    p: 0.5
   Normalize:
     mean: ${img_mean}
     std: ${img_std}
