--- a/exp/exp_0182/config/config.yaml
+++ b/exp/exp_0182/config/config.yaml
@@ -11,7 +11,7 @@ device: cuda:0
 cls: [100]
 cls_weights: [1]
 sigma: 10
-lambda_: 0.03
+lambda_: 0.001
 save: True
 save_step: 75
 result_output: True
@@ -22,7 +22,7 @@ dense_columns: ['original'] # 'original', 'basic', 'hash', ('all')
 features_num: 128
 
 ######   Loss   ########################################
-loss: RMSELoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
+loss: MSELoss # MSELoss, BCEWithLogitsLoss, RMSELoss, FOCALLoss
 gamma: 0. # FOCALLoss
 
 ##### Optimizer ########################################
@@ -53,7 +53,7 @@ valid_bs: 32
 num_workers: 2
 
 ##### MixUp #############################################
-mix_p: 0
+mix_p: 0.
 init_nomix_epoch: 0
 last_nomix_epoch: 0
 
@@ -64,14 +64,15 @@ train_aug:
   RandomResizedCrop:
     height: ${img_size}
     width: ${img_size}
+    scale: [0.75, 1.0]
     p: 1.0
-  # HorizontalFlip:
-  #   p: 0.5
-  # ShiftScaleRotate:
-  #   shift_limit: 0.1
-  #   scale_limit: 0.1
-  #   rotate_limit: 10
-  #   p: 0.5
+  HorizontalFlip:
+    p: 0.5
+  ShiftScaleRotate:
+    shift_limit: 0.1
+    scale_limit: 0.1
+    rotate_limit: 10
+    p: 0.5
   Normalize:
     mean: ${img_mean}
     std: ${img_std}
