--- a/exp/exp_0183/config/config.yaml
+++ b/exp/exp_0183/config/config.yaml
@@ -3,19 +3,19 @@ data_path: /content/drive/MyDrive/kaggle_PetFinder/data
 wandb_project: kaggle_PF
 seed: 77
 epoch: 10
-fold: StratifiedKFold
+fold: StratifiedGroupKFold
 fold_num: 10
 use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
-model_arch: swin_large_patch4_window7_224
+model_arch: swin_large_patch4_window12_384_in22k
 device: cuda:0
 cls: [1, 5, 10, 20, 100]
 cls_weights: [1, 1, 1, 1, 1]
 save: True
-save_step: 75
+save_step: 150
 result_output: True
 
 ######   Features   ####################################
-train_csv: 'train' # {train_csv}.csv
+train_csv: 'train_5' # {train_csv}.csv
 dense_columns: ['original'] # 'original', 'basic', 'hash', ('all')
 features_num: 128
 
@@ -25,7 +25,7 @@ gamma: 0.1 # FOCALLoss
 
 ##### Optimizer ########################################
 optimizer: AdamW
-lr: 2e-5
+lr: 5e-6
 weight_decay: 1e-6
 beta1: 0.5
 beta2: 0.999
@@ -46,8 +46,8 @@ img_std: [0.229, 0.224, 0.225]
 img_size: 224
 
 ##### DataLoader ########################################
-train_bs: 32
-valid_bs: 32
+train_bs: 8
+valid_bs: 8
 num_workers: 2
 
 ##### MixUp #############################################
