--- a/exp/exp_0189/config/config.yaml
+++ b/exp/exp_0189/config/config.yaml
@@ -65,7 +65,11 @@ train_aug:
     p: 1.0
   HorizontalFlip:
     p: 0.5
-  
+  ShiftScaleRotate:
+    shift_limit: 0.1
+    scale_limit: 0.1
+    rotate_limit: 5
+    p: 0.5
   Normalize:
     mean: ${img_mean}
     std: ${img_std}
