--- a/exp/exp_0191/config/config.yaml
+++ b/exp/exp_0191/config/config.yaml
@@ -2,10 +2,10 @@
 data_path: /content/drive/MyDrive/kaggle_PetFinder/data
 wandb_project: kaggle_PF
 seed: 77
-epoch: 10
+epoch: 1
 fold: StratifiedGroupKFold
 fold_num: 10
-use_fold: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+use_fold: [0] # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 model_arch: swin_large_patch4_window7_224
 device: cuda:0
 cls: [1, 5, 10, 20, 100]
@@ -13,7 +13,7 @@ cls_weights: [1, 1, 1, 1, 1]
 
 ######   save settings   ###############################
 save: True
-save_step: 40
+save_step: 300
 result_output: True
 ttas: [1, 2, 4]
 
